--- a/professionalBackgroundProjectList.json
+++ b/professionalBackgroundProjectList.json
@@ -1,10 +1,9 @@
 [
 
-{"listItem":"Projetando fundações, estudando e analisando solos e suas formações para melhor solução estrutural com economia e segurança"},
-{"listItem":"Tenho e sou o operador de perfuratriz rotativa de estaca escavada e com vasto conhecimento dos solos"},
-{"listItem":"​Projetos em estruturas em concreto armado"},
-{"listItem":"Projetos em estrutura metálica"},
-{"listItem":"​Projetos de reforço estrutural e geotécnico"},
-{"listItem":"​Laudos técnicos de fundação e estruturas"}
+{"paragraph":"Atuamos no desenvolvimento de projetos de fundações, por meio do estudo e da análise dos solos e de suas formações, visando sempre a solução estrutural mais eficiente, com segurança, desempenho e otimização de custos"},
+{"paragraph":"Contamos com operação própria de perfuratriz rotativa para execução de estacas escavadas, aliada a amplo conhecimento geotécnico dos solos, garantindo maior controle técnico e qualidade na execução"},
+{"paragraph":"Desenvolvemos projetos estruturais em concreto armado e em estruturas metálicas, além de projetos de reforço estrutural e geotécnico, atendendo às necessidades específicas de cada obra"},
+{"paragraph":"Elaboramos ainda laudos técnicos de fundações e estruturas, com embasamento técnico e conformidade às normas vigentes"}
+
 
 ]
